@@ -1,24 +1,26 @@
 package com.maciej916.indreb.integration.jei.category.impl;
 
-import com.maciej916.indreb.common.receipe.impl.AlloySmeltingRecipe;
+import com.maciej916.indreb.common.recipe.impl.AlloySmeltingRecipe;
 import com.maciej916.indreb.common.registries.ModBlocks;
 import com.maciej916.indreb.common.registries.ModRecipeSerializer;
 import com.maciej916.indreb.common.util.GuiUtil;
 import com.maciej916.indreb.integration.jei.category.AbstractRecipeCategory;
 import com.mojang.blaze3d.vertex.PoseStack;
 import mezz.jei.api.constants.VanillaTypes;
-import mezz.jei.api.gui.IRecipeLayout;
+import mezz.jei.api.gui.builder.IRecipeLayoutBuilder;
+import mezz.jei.api.gui.builder.IRecipeSlotBuilder;
 import mezz.jei.api.gui.drawable.IDrawableAnimated;
-import mezz.jei.api.gui.ingredient.IGuiItemStackGroup;
+import mezz.jei.api.gui.ingredient.IRecipeSlotsView;
 import mezz.jei.api.helpers.IGuiHelper;
-import mezz.jei.api.ingredients.IIngredients;
+import mezz.jei.api.recipe.IFocusGroup;
+import mezz.jei.api.recipe.RecipeIngredientRole;
+import mezz.jei.api.recipe.RecipeType;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.crafting.Ingredient;
 
 import java.util.Arrays;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import static com.maciej916.indreb.common.util.Constants.*;
 
@@ -26,9 +28,9 @@ public class AlloySmeltingCategory extends AbstractRecipeCategory<AlloySmeltingR
 
     public static final ResourceLocation UID = ModRecipeSerializer.ALLOY_SMELTING.getRegistryName();
 
-    protected IDrawableAnimated progress;
-    protected IDrawableAnimated energy;
-    protected IDrawableAnimated fire;
+    private IDrawableAnimated progress;
+    private IDrawableAnimated energy;
+    private IDrawableAnimated fire;
 
     public AlloySmeltingCategory(IGuiHelper guiHelper) {
         super(
@@ -37,48 +39,39 @@ public class AlloySmeltingCategory extends AbstractRecipeCategory<AlloySmeltingR
                 "alloy_smelting",
                 guiHelper,
                 () -> guiHelper.createDrawable(JEI_LARGE, 0, 0, 152, 54),
-                () -> guiHelper.createDrawableIngredient(new ItemStack(ModBlocks.ALLOY_SMELTER))
+                () -> guiHelper.createDrawableIngredient(VanillaTypes.ITEM_STACK, new ItemStack(ModBlocks.ALLOY_SMELTER))
         );
     }
 
     @Override
-    public void setIngredients(AlloySmeltingRecipe recipe, IIngredients ingredients) {
-        ingredients.setInputLists(VanillaTypes.ITEM, recipe.getIngredientMap().keySet().stream().map(ingredient -> Arrays.asList(ingredient.getItems())).collect(Collectors.toList()));
-        ingredients.setOutput(VanillaTypes.ITEM, recipe.getResultItem());
+    public RecipeType<AlloySmeltingRecipe> getRecipeType() {
+        return new RecipeType<>(UID, getRecipeClass());
     }
 
     @Override
-    public void setRecipe(IRecipeLayout recipeLayout, AlloySmeltingRecipe recipe, IIngredients ingredients) {
-        IGuiItemStackGroup guiItemStacks = recipeLayout.getItemStacks();
-
-        guiItemStacks.init(0, true, 4, 18);
-        guiItemStacks.init(1, true, 25, 6);
-        guiItemStacks.init(2, true, 46, 18);
-        guiItemStacks.init(3, false, 102, 18);
+    public void setRecipe(IRecipeLayoutBuilder builder, AlloySmeltingRecipe recipe, IFocusGroup focuses) {
+        this.progress = guiHelper.drawableBuilder(PROCESS, 25, 0, 24, 16).buildAnimated(recipe.getDuration(), IDrawableAnimated.StartDirection.LEFT, false);
+        this.energy = guiHelper.drawableBuilder(JEI, 249, 0, 7, 37).buildAnimated(200, IDrawableAnimated.StartDirection.TOP, true);
+        this.fire = guiHelper.drawableBuilder(PROCESS, 67, 0, 16,  16).buildAnimated(100, IDrawableAnimated.StartDirection.TOP, true);
 
         int i = 0;
         for (Map.Entry<Ingredient, Integer> entry : recipe.getIngredientMap().entrySet()) {
             Ingredient ingredient = entry.getKey();
             Integer count = entry.getValue();
-            guiItemStacks.set(i++, Arrays.stream(ingredient.getItems())
-                    .map(s -> {
-                        ItemStack stack = s.copy();
-                        stack.setCount(count);
-                        return stack;
-                    })
-                    .collect(Collectors.toList())
-            );
+            IRecipeSlotBuilder slot = switch (i++) {
+                case 0 -> builder.addSlot(RecipeIngredientRole.INPUT, 5, 19);
+                case 1 -> builder.addSlot(RecipeIngredientRole.INPUT, 26, 7);
+                default -> builder.addSlot(RecipeIngredientRole.INPUT, 47, 19);
+            };
+
+            slot.addItemStacks(Arrays.stream(ingredient.getItems()).peek(itemStack -> itemStack.setCount(count)).toList());
         }
 
-        guiItemStacks.set(3, recipe.getResultItem());
-
-        this.progress = guiHelper.drawableBuilder(PROCESS, 25, 0, 24, 16).buildAnimated(recipe.getDuration(), IDrawableAnimated.StartDirection.LEFT, false);
-        this.energy = guiHelper.drawableBuilder(JEI, 249, 0, 7, 37).buildAnimated(200, IDrawableAnimated.StartDirection.TOP, true);
-        this.fire = guiHelper.drawableBuilder(PROCESS, 67, 0, 16,  16).buildAnimated(100, IDrawableAnimated.StartDirection.TOP, true);
+        builder.addSlot(RecipeIngredientRole.OUTPUT, 103, 19).addItemStack(recipe.getResultItem());
     }
 
     @Override
-    public void draw(AlloySmeltingRecipe recipe, PoseStack poseStack, double mouseX, double mouseY) {
+    public void draw(AlloySmeltingRecipe recipe, IRecipeSlotsView recipeSlotsView, PoseStack poseStack, double mouseX, double mouseY) {
         this.progress.draw(poseStack, halfX - 6, 19);
         this.energy.draw(poseStack, halfX + 58, 7);
         this.fire.draw(poseStack, halfX - 49, 27);
@@ -86,6 +79,7 @@ public class AlloySmeltingCategory extends AbstractRecipeCategory<AlloySmeltingR
         if (recipe.getExperience() > 0) {
             GuiUtil.renderScaled(poseStack, recipe.getExperience() + " XP", 0, 0, 0.75f, 0x7E7E7E, false);
         }
+
         GuiUtil.renderScaled(poseStack, recipe.getPowerCost() + " IE/T", 0, 48, 0.75f, 0x7E7E7E, false);
     }
 }
